tarea3_P4_2017/tiny-python/src/tinypython_parser.output
Grammar

    0 $accept: input $end

    1 input: opt_eols statement_list opt_eols

    2 statement_list: statement_list eols statement
    3               | statement

    4 eols: TK_EOL

    5 opt_eols: eols
    6         | %empty

    7 statement: print_statement
    8          | assign_statement
    9          | for_statement
   10          | while_statement
   11          | if_statement
   12          | pass_statement
   13          | call_statement

   14 print_statement: KW_PRINT '(' arg_list ')'

   15 arg_list: arg_list ',' argument
   16         | argument

   17 argument: expr
   18         | STRING_LITERAL

   19 assign_statement: TK_ID '=' expr
   20                 | TK_ID '[' expr ']' '=' expr
   21                 | TK_ID '[' expr ']'

   22 if_statement: KW_IF expr ':' statement_block eols opt_else

   23 opt_else: KW_ELSE ':' statement_block
   24         | %empty

   25 while_statement: KW_WHILE expr ':' statement_block

   26 for_statement: KW_FOR TK_ID KW_IN KW_RANGE '(' expr ',' expr ')' ':' statement_block

   27 pass_statement: KW_PASS

   28 call_statement: KW_RANDSEED '(' expr ')'

   29 statement_block: TK_INDENT statement_list TK_DEDENT

   30 expr: expr OP_LT expra
   31     | expr OP_GT expra
   32     | expr OP_LTE expra
   33     | expr OP_GTE expra
   34     | expr OP_NE expra
   35     | expr OP_EQ expra
   36     | expra

   37 expra: expra '+' term
   38      | expra '-' term
   39      | term

   40 term: term '*' exponent
   41     | term '/' exponent
   42     | term '%' exponent
   43     | exponent

   44 exponent: factor OP_EXP exponent
   45         | factor

   46 factor: '(' expr ')'
   47       | '-' factor
   48       | TK_NUM
   49       | KW_INPUT '(' STRING_LITERAL ')'
   50       | TK_ID
   51       | TK_ID '[' expr ']'
   52       | KW_TIMECLOCK '(' ')'
   53       | KW_RANDINT '(' expr ',' expr ')'


Terminals, with rules where they appear

$end (0) 0
'%' (37) 42
'(' (40) 14 26 28 46 49 52 53
')' (41) 14 26 28 46 49 52 53
'*' (42) 40
'+' (43) 37
',' (44) 15 26 53
'-' (45) 38 47
'/' (47) 41
':' (58) 22 23 25 26
'=' (61) 19 20
'[' (91) 20 21 51
']' (93) 20 21 51
error (256)
TK_NUM (258) 48
TK_ID (259) 19 20 21 26 50 51
STRING_LITERAL (260) 18 49
KW_IF (261) 22
KW_ELSE (262) 23
KW_WHILE (263) 25
KW_FOR (264) 26
KW_IN (265) 26
KW_RANGE (266) 26
KW_PRINT (267) 14
KW_INPUT (268) 49
KW_PASS (269) 27
KW_RANDINT (270) 53
KW_RANDSEED (271) 28
KW_TIMECLOCK (272) 52
TK_INDENT (273) 29
TK_DEDENT (274) 29
TK_EOL (275) 4
OP_EXP (276) 44
OP_LT (277) 30
OP_GT (278) 31
OP_LTE (279) 32
OP_GTE (280) 33
OP_NE (281) 34
OP_EQ (282) 35


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
input (41)
    on left: 1, on right: 0
statement_list (42)
    on left: 2 3, on right: 1 2 29
eols (43)
    on left: 4, on right: 2 5 22
opt_eols (44)
    on left: 5 6, on right: 1
statement (45)
    on left: 7 8 9 10 11 12 13, on right: 2 3
print_statement (46)
    on left: 14, on right: 7
arg_list (47)
    on left: 15 16, on right: 14 15
argument (48)
    on left: 17 18, on right: 15 16
assign_statement (49)
    on left: 19 20 21, on right: 8
if_statement (50)
    on left: 22, on right: 11
opt_else (51)
    on left: 23 24, on right: 22
while_statement (52)
    on left: 25, on right: 10
for_statement (53)
    on left: 26, on right: 9
pass_statement (54)
    on left: 27, on right: 12
call_statement (55)
    on left: 28, on right: 13
statement_block (56)
    on left: 29, on right: 22 23 25 26
expr (57)
    on left: 30 31 32 33 34 35 36, on right: 17 19 20 21 22 25 26 28
    30 31 32 33 34 35 46 51 53
expra (58)
    on left: 37 38 39, on right: 30 31 32 33 34 35 36 37 38
term (59)
    on left: 40 41 42 43, on right: 37 38 39 40 41 42
exponent (60)
    on left: 44 45, on right: 40 41 42 43 44
factor (61)
    on left: 46 47 48 49 50 51 52 53, on right: 44 45 47


State 0

    0 $accept: . input $end
    1 input: . opt_eols statement_list opt_eols
    4 eols: . TK_EOL
    5 opt_eols: . eols
    6         | . %empty  [TK_ID, KW_IF, KW_WHILE, KW_FOR, KW_PRINT, KW_PASS, KW_RANDSEED]

    TK_EOL  shift, and go to state 1

    $default  reduce using rule 6 (opt_eols)

    input     go to state 2
    eols      go to state 3
    opt_eols  go to state 4


State 1

    4 eols: TK_EOL .

    $default  reduce using rule 4 (eols)


State 2

    0 $accept: input . $end

    $end  shift, and go to state 5


State 3

    5 opt_eols: eols .

    $default  reduce using rule 5 (opt_eols)


State 4

    1 input: opt_eols . statement_list opt_eols
    2 statement_list: . statement_list eols statement
    3               | . statement
    7 statement: . print_statement
    8          | . assign_statement
    9          | . for_statement
   10          | . while_statement
   11          | . if_statement
   12          | . pass_statement
   13          | . call_statement
   14 print_statement: . KW_PRINT '(' arg_list ')'
   19 assign_statement: . TK_ID '=' expr
   20                 | . TK_ID '[' expr ']' '=' expr
   21                 | . TK_ID '[' expr ']'
   22 if_statement: . KW_IF expr ':' statement_block eols opt_else
   25 while_statement: . KW_WHILE expr ':' statement_block
   26 for_statement: . KW_FOR TK_ID KW_IN KW_RANGE '(' expr ',' expr ')' ':' statement_block
   27 pass_statement: . KW_PASS
   28 call_statement: . KW_RANDSEED '(' expr ')'

    TK_ID        shift, and go to state 6
    KW_IF        shift, and go to state 7
    KW_WHILE     shift, and go to state 8
    KW_FOR       shift, and go to state 9
    KW_PRINT     shift, and go to state 10
    KW_PASS      shift, and go to state 11
    KW_RANDSEED  shift, and go to state 12

    statement_list    go to state 13
    statement         go to state 14
    print_statement   go to state 15
    assign_statement  go to state 16
    if_statement      go to state 17
    while_statement   go to state 18
    for_statement     go to state 19
    pass_statement    go to state 20
    call_statement    go to state 21


State 5

    0 $accept: input $end .

    $default  accept


State 6

   19 assign_statement: TK_ID . '=' expr
   20                 | TK_ID . '[' expr ']' '=' expr
   21                 | TK_ID . '[' expr ']'

    '='  shift, and go to state 22
    '['  shift, and go to state 23


State 7

   22 if_statement: KW_IF . expr ':' statement_block eols opt_else
   30 expr: . expr OP_LT expra
   31     | . expr OP_GT expra
   32     | . expr OP_LTE expra
   33     | . expr OP_GTE expra
   34     | . expr OP_NE expra
   35     | . expr OP_EQ expra
   36     | . expra
   37 expra: . expra '+' term
   38      | . expra '-' term
   39      | . term
   40 term: . term '*' exponent
   41     | . term '/' exponent
   42     | . term '%' exponent
   43     | . exponent
   44 exponent: . factor OP_EXP exponent
   45         | . factor
   46 factor: . '(' expr ')'
   47       | . '-' factor
   48       | . TK_NUM
   49       | . KW_INPUT '(' STRING_LITERAL ')'
   50       | . TK_ID
   51       | . TK_ID '[' expr ']'
   52       | . KW_TIMECLOCK '(' ')'
   53       | . KW_RANDINT '(' expr ',' expr ')'

    TK_NUM        shift, and go to state 24
    TK_ID         shift, and go to state 25
    KW_INPUT      shift, and go to state 26
    KW_RANDINT    shift, and go to state 27
    KW_TIMECLOCK  shift, and go to state 28
    '('           shift, and go to state 29
    '-'           shift, and go to state 30

    expr      go to state 31
    expra     go to state 32
    term      go to state 33
    exponent  go to state 34
    factor    go to state 35


State 8

   25 while_statement: KW_WHILE . expr ':' statement_block
   30 expr: . expr OP_LT expra
   31     | . expr OP_GT expra
   32     | . expr OP_LTE expra
   33     | . expr OP_GTE expra
   34     | . expr OP_NE expra
   35     | . expr OP_EQ expra
   36     | . expra
   37 expra: . expra '+' term
   38      | . expra '-' term
   39      | . term
   40 term: . term '*' exponent
   41     | . term '/' exponent
   42     | . term '%' exponent
   43     | . exponent
   44 exponent: . factor OP_EXP exponent
   45         | . factor
   46 factor: . '(' expr ')'
   47       | . '-' factor
   48       | . TK_NUM
   49       | . KW_INPUT '(' STRING_LITERAL ')'
   50       | . TK_ID
   51       | . TK_ID '[' expr ']'
   52       | . KW_TIMECLOCK '(' ')'
   53       | . KW_RANDINT '(' expr ',' expr ')'

    TK_NUM        shift, and go to state 24
    TK_ID         shift, and go to state 25
    KW_INPUT      shift, and go to state 26
    KW_RANDINT    shift, and go to state 27
    KW_TIMECLOCK  shift, and go to state 28
    '('           shift, and go to state 29
    '-'           shift, and go to state 30

    expr      go to state 36
    expra     go to state 32
    term      go to state 33
    exponent  go to state 34
    factor    go to state 35


State 9

   26 for_statement: KW_FOR . TK_ID KW_IN KW_RANGE '(' expr ',' expr ')' ':' statement_block

    TK_ID  shift, and go to state 37


State 10

   14 print_statement: KW_PRINT . '(' arg_list ')'

    '('  shift, and go to state 38


State 11

   27 pass_statement: KW_PASS .

    $default  reduce using rule 27 (pass_statement)


State 12

   28 call_statement: KW_RANDSEED . '(' expr ')'

    '('  shift, and go to state 39


State 13

    1 input: opt_eols statement_list . opt_eols
    2 statement_list: statement_list . eols statement
    4 eols: . TK_EOL
    5 opt_eols: . eols
    6         | . %empty  [$end]

    TK_EOL  shift, and go to state 1

    $default  reduce using rule 6 (opt_eols)

    eols      go to state 40
    opt_eols  go to state 41


State 14

    3 statement_list: statement .

    $default  reduce using rule 3 (statement_list)


State 15

    7 statement: print_statement .

    $default  reduce using rule 7 (statement)


State 16

    8 statement: assign_statement .

    $default  reduce using rule 8 (statement)


State 17

   11 statement: if_statement .

    $default  reduce using rule 11 (statement)


State 18

   10 statement: while_statement .

    $default  reduce using rule 10 (statement)


State 19

    9 statement: for_statement .

    $default  reduce using rule 9 (statement)


State 20

   12 statement: pass_statement .

    $default  reduce using rule 12 (statement)


State 21

   13 statement: call_statement .

    $default  reduce using rule 13 (statement)


State 22

   19 assign_statement: TK_ID '=' . expr
   30 expr: . expr OP_LT expra
   31     | . expr OP_GT expra
   32     | . expr OP_LTE expra
   33     | . expr OP_GTE expra
   34     | . expr OP_NE expra
   35     | . expr OP_EQ expra
   36     | . expra
   37 expra: . expra '+' term
   38      | . expra '-' term
   39      | . term
   40 term: . term '*' exponent
   41     | . term '/' exponent
   42     | . term '%' exponent
   43     | . exponent
   44 exponent: . factor OP_EXP exponent
   45         | . factor
   46 factor: . '(' expr ')'
   47       | . '-' factor
   48       | . TK_NUM
   49       | . KW_INPUT '(' STRING_LITERAL ')'
   50       | . TK_ID
   51       | . TK_ID '[' expr ']'
   52       | . KW_TIMECLOCK '(' ')'
   53       | . KW_RANDINT '(' expr ',' expr ')'

    TK_NUM        shift, and go to state 24
    TK_ID         shift, and go to state 25
    KW_INPUT      shift, and go to state 26
    KW_RANDINT    shift, and go to state 27
    KW_TIMECLOCK  shift, and go to state 28
    '('           shift, and go to state 29
    '-'           shift, and go to state 30

    expr      go to state 42
    expra     go to state 32
    term      go to state 33
    exponent  go to state 34
    factor    go to state 35


State 23

   20 assign_statement: TK_ID '[' . expr ']' '=' expr
   21                 | TK_ID '[' . expr ']'
   30 expr: . expr OP_LT expra
   31     | . expr OP_GT expra
   32     | . expr OP_LTE expra
   33     | . expr OP_GTE expra
   34     | . expr OP_NE expra
   35     | . expr OP_EQ expra
   36     | . expra
   37 expra: . expra '+' term
   38      | . expra '-' term
   39      | . term
   40 term: . term '*' exponent
   41     | . term '/' exponent
   42     | . term '%' exponent
   43     | . exponent
   44 exponent: . factor OP_EXP exponent
   45         | . factor
   46 factor: . '(' expr ')'
   47       | . '-' factor
   48       | . TK_NUM
   49       | . KW_INPUT '(' STRING_LITERAL ')'
   50       | . TK_ID
   51       | . TK_ID '[' expr ']'
   52       | . KW_TIMECLOCK '(' ')'
   53       | . KW_RANDINT '(' expr ',' expr ')'

    TK_NUM        shift, and go to state 24
    TK_ID         shift, and go to state 25
    KW_INPUT      shift, and go to state 26
    KW_RANDINT    shift, and go to state 27
    KW_TIMECLOCK  shift, and go to state 28
    '('           shift, and go to state 29
    '-'           shift, and go to state 30

    expr      go to state 43
    expra     go to state 32
    term      go to state 33
    exponent  go to state 34
    factor    go to state 35


State 24

   48 factor: TK_NUM .

    $default  reduce using rule 48 (factor)


State 25

   50 factor: TK_ID .  [$end, TK_DEDENT, TK_EOL, OP_EXP, OP_LT, OP_GT, OP_LTE, OP_GTE, OP_NE, OP_EQ, ')', ',', ']', ':', '+', '-', '*', '/', '%']
   51       | TK_ID . '[' expr ']'

    '['  shift, and go to state 44

    $default  reduce using rule 50 (factor)


State 26

   49 factor: KW_INPUT . '(' STRING_LITERAL ')'

    '('  shift, and go to state 45


State 27

   53 factor: KW_RANDINT . '(' expr ',' expr ')'

    '('  shift, and go to state 46


State 28

   52 factor: KW_TIMECLOCK . '(' ')'

    '('  shift, and go to state 47


State 29

   30 expr: . expr OP_LT expra
   31     | . expr OP_GT expra
   32     | . expr OP_LTE expra
   33     | . expr OP_GTE expra
   34     | . expr OP_NE expra
   35     | . expr OP_EQ expra
   36     | . expra
   37 expra: . expra '+' term
   38      | . expra '-' term
   39      | . term
   40 term: . term '*' exponent
   41     | . term '/' exponent
   42     | . term '%' exponent
   43     | . exponent
   44 exponent: . factor OP_EXP exponent
   45         | . factor
   46 factor: . '(' expr ')'
   46       | '(' . expr ')'
   47       | . '-' factor
   48       | . TK_NUM
   49       | . KW_INPUT '(' STRING_LITERAL ')'
   50       | . TK_ID
   51       | . TK_ID '[' expr ']'
   52       | . KW_TIMECLOCK '(' ')'
   53       | . KW_RANDINT '(' expr ',' expr ')'

    TK_NUM        shift, and go to state 24
    TK_ID         shift, and go to state 25
    KW_INPUT      shift, and go to state 26
    KW_RANDINT    shift, and go to state 27
    KW_TIMECLOCK  shift, and go to state 28
    '('           shift, and go to state 29
    '-'           shift, and go to state 30

    expr      go to state 48
    expra     go to state 32
    term      go to state 33
    exponent  go to state 34
    factor    go to state 35


State 30

   46 factor: . '(' expr ')'
   47       | . '-' factor
   47       | '-' . factor
   48       | . TK_NUM
   49       | . KW_INPUT '(' STRING_LITERAL ')'
   50       | . TK_ID
   51       | . TK_ID '[' expr ']'
   52       | . KW_TIMECLOCK '(' ')'
   53       | . KW_RANDINT '(' expr ',' expr ')'

    TK_NUM        shift, and go to state 24
    TK_ID         shift, and go to state 25
    KW_INPUT      shift, and go to state 26
    KW_RANDINT    shift, and go to state 27
    KW_TIMECLOCK  shift, and go to state 28
    '('           shift, and go to state 29
    '-'           shift, and go to state 30

    factor  go to state 49


State 31

   22 if_statement: KW_IF expr . ':' statement_block eols opt_else
   30 expr: expr . OP_LT expra
   31     | expr . OP_GT expra
   32     | expr . OP_LTE expra
   33     | expr . OP_GTE expra
   34     | expr . OP_NE expra
   35     | expr . OP_EQ expra

    OP_LT   shift, and go to state 50
    OP_GT   shift, and go to state 51
    OP_LTE  shift, and go to state 52
    OP_GTE  shift, and go to state 53
    OP_NE   shift, and go to state 54
    OP_EQ   shift, and go to state 55
    ':'     shift, and go to state 56


State 32

   36 expr: expra .  [$end, TK_DEDENT, TK_EOL, OP_LT, OP_GT, OP_LTE, OP_GTE, OP_NE, OP_EQ, ')', ',', ']', ':']
   37 expra: expra . '+' term
   38      | expra . '-' term

    '+'  shift, and go to state 57
    '-'  shift, and go to state 58

    $default  reduce using rule 36 (expr)


State 33

   39 expra: term .  [$end, TK_DEDENT, TK_EOL, OP_LT, OP_GT, OP_LTE, OP_GTE, OP_NE, OP_EQ, ')', ',', ']', ':', '+', '-']
   40 term: term . '*' exponent
   41     | term . '/' exponent
   42     | term . '%' exponent

    '*'  shift, and go to state 59
    '/'  shift, and go to state 60
    '%'  shift, and go to state 61

    $default  reduce using rule 39 (expra)


State 34

   43 term: exponent .

    $default  reduce using rule 43 (term)


State 35

   44 exponent: factor . OP_EXP exponent
   45         | factor .  [$end, TK_DEDENT, TK_EOL, OP_LT, OP_GT, OP_LTE, OP_GTE, OP_NE, OP_EQ, ')', ',', ']', ':', '+', '-', '*', '/', '%']

    OP_EXP  shift, and go to state 62

    $default  reduce using rule 45 (exponent)


State 36

   25 while_statement: KW_WHILE expr . ':' statement_block
   30 expr: expr . OP_LT expra
   31     | expr . OP_GT expra
   32     | expr . OP_LTE expra
   33     | expr . OP_GTE expra
   34     | expr . OP_NE expra
   35     | expr . OP_EQ expra

    OP_LT   shift, and go to state 50
    OP_GT   shift, and go to state 51
    OP_LTE  shift, and go to state 52
    OP_GTE  shift, and go to state 53
    OP_NE   shift, and go to state 54
    OP_EQ   shift, and go to state 55
    ':'     shift, and go to state 63


State 37

   26 for_statement: KW_FOR TK_ID . KW_IN KW_RANGE '(' expr ',' expr ')' ':' statement_block

    KW_IN  shift, and go to state 64


State 38

   14 print_statement: KW_PRINT '(' . arg_list ')'
   15 arg_list: . arg_list ',' argument
   16         | . argument
   17 argument: . expr
   18         | . STRING_LITERAL
   30 expr: . expr OP_LT expra
   31     | . expr OP_GT expra
   32     | . expr OP_LTE expra
   33     | . expr OP_GTE expra
   34     | . expr OP_NE expra
   35     | . expr OP_EQ expra
   36     | . expra
   37 expra: . expra '+' term
   38      | . expra '-' term
   39      | . term
   40 term: . term '*' exponent
   41     | . term '/' exponent
   42     | . term '%' exponent
   43     | . exponent
   44 exponent: . factor OP_EXP exponent
   45         | . factor
   46 factor: . '(' expr ')'
   47       | . '-' factor
   48       | . TK_NUM
   49       | . KW_INPUT '(' STRING_LITERAL ')'
   50       | . TK_ID
   51       | . TK_ID '[' expr ']'
   52       | . KW_TIMECLOCK '(' ')'
   53       | . KW_RANDINT '(' expr ',' expr ')'

    TK_NUM          shift, and go to state 24
    TK_ID           shift, and go to state 25
    STRING_LITERAL  shift, and go to state 65
    KW_INPUT        shift, and go to state 26
    KW_RANDINT      shift, and go to state 27
    KW_TIMECLOCK    shift, and go to state 28
    '('             shift, and go to state 29
    '-'             shift, and go to state 30

    arg_list  go to state 66
    argument  go to state 67
    expr      go to state 68
    expra     go to state 32
    term      go to state 33
    exponent  go to state 34
    factor    go to state 35


State 39

   28 call_statement: KW_RANDSEED '(' . expr ')'
   30 expr: . expr OP_LT expra
   31     | . expr OP_GT expra
   32     | . expr OP_LTE expra
   33     | . expr OP_GTE expra
   34     | . expr OP_NE expra
   35     | . expr OP_EQ expra
   36     | . expra
   37 expra: . expra '+' term
   38      | . expra '-' term
   39      | . term
   40 term: . term '*' exponent
   41     | . term '/' exponent
   42     | . term '%' exponent
   43     | . exponent
   44 exponent: . factor OP_EXP exponent
   45         | . factor
   46 factor: . '(' expr ')'
   47       | . '-' factor
   48       | . TK_NUM
   49       | . KW_INPUT '(' STRING_LITERAL ')'
   50       | . TK_ID
   51       | . TK_ID '[' expr ']'
   52       | . KW_TIMECLOCK '(' ')'
   53       | . KW_RANDINT '(' expr ',' expr ')'

    TK_NUM        shift, and go to state 24
    TK_ID         shift, and go to state 25
    KW_INPUT      shift, and go to state 26
    KW_RANDINT    shift, and go to state 27
    KW_TIMECLOCK  shift, and go to state 28
    '('           shift, and go to state 29
    '-'           shift, and go to state 30

    expr      go to state 69
    expra     go to state 32
    term      go to state 33
    exponent  go to state 34
    factor    go to state 35


State 40

    2 statement_list: statement_list eols . statement
    5 opt_eols: eols .  [$end]
    7 statement: . print_statement
    8          | . assign_statement
    9          | . for_statement
   10          | . while_statement
   11          | . if_statement
   12          | . pass_statement
   13          | . call_statement
   14 print_statement: . KW_PRINT '(' arg_list ')'
   19 assign_statement: . TK_ID '=' expr
   20                 | . TK_ID '[' expr ']' '=' expr
   21                 | . TK_ID '[' expr ']'
   22 if_statement: . KW_IF expr ':' statement_block eols opt_else
   25 while_statement: . KW_WHILE expr ':' statement_block
   26 for_statement: . KW_FOR TK_ID KW_IN KW_RANGE '(' expr ',' expr ')' ':' statement_block
   27 pass_statement: . KW_PASS
   28 call_statement: . KW_RANDSEED '(' expr ')'

    TK_ID        shift, and go to state 6
    KW_IF        shift, and go to state 7
    KW_WHILE     shift, and go to state 8
    KW_FOR       shift, and go to state 9
    KW_PRINT     shift, and go to state 10
    KW_PASS      shift, and go to state 11
    KW_RANDSEED  shift, and go to state 12

    $default  reduce using rule 5 (opt_eols)

    statement         go to state 70
    print_statement   go to state 15
    assign_statement  go to state 16
    if_statement      go to state 17
    while_statement   go to state 18
    for_statement     go to state 19
    pass_statement    go to state 20
    call_statement    go to state 21


State 41

    1 input: opt_eols statement_list opt_eols .

    $default  reduce using rule 1 (input)


State 42

   19 assign_statement: TK_ID '=' expr .  [$end, TK_DEDENT, TK_EOL]
   30 expr: expr . OP_LT expra
   31     | expr . OP_GT expra
   32     | expr . OP_LTE expra
   33     | expr . OP_GTE expra
   34     | expr . OP_NE expra
   35     | expr . OP_EQ expra

    OP_LT   shift, and go to state 50
    OP_GT   shift, and go to state 51
    OP_LTE  shift, and go to state 52
    OP_GTE  shift, and go to state 53
    OP_NE   shift, and go to state 54
    OP_EQ   shift, and go to state 55

    $default  reduce using rule 19 (assign_statement)


State 43

   20 assign_statement: TK_ID '[' expr . ']' '=' expr
   21                 | TK_ID '[' expr . ']'
   30 expr: expr . OP_LT expra
   31     | expr . OP_GT expra
   32     | expr . OP_LTE expra
   33     | expr . OP_GTE expra
   34     | expr . OP_NE expra
   35     | expr . OP_EQ expra

    OP_LT   shift, and go to state 50
    OP_GT   shift, and go to state 51
    OP_LTE  shift, and go to state 52
    OP_GTE  shift, and go to state 53
    OP_NE   shift, and go to state 54
    OP_EQ   shift, and go to state 55
    ']'     shift, and go to state 71


State 44

   30 expr: . expr OP_LT expra
   31     | . expr OP_GT expra
   32     | . expr OP_LTE expra
   33     | . expr OP_GTE expra
   34     | . expr OP_NE expra
   35     | . expr OP_EQ expra
   36     | . expra
   37 expra: . expra '+' term
   38      | . expra '-' term
   39      | . term
   40 term: . term '*' exponent
   41     | . term '/' exponent
   42     | . term '%' exponent
   43     | . exponent
   44 exponent: . factor OP_EXP exponent
   45         | . factor
   46 factor: . '(' expr ')'
   47       | . '-' factor
   48       | . TK_NUM
   49       | . KW_INPUT '(' STRING_LITERAL ')'
   50       | . TK_ID
   51       | . TK_ID '[' expr ']'
   51       | TK_ID '[' . expr ']'
   52       | . KW_TIMECLOCK '(' ')'
   53       | . KW_RANDINT '(' expr ',' expr ')'

    TK_NUM        shift, and go to state 24
    TK_ID         shift, and go to state 25
    KW_INPUT      shift, and go to state 26
    KW_RANDINT    shift, and go to state 27
    KW_TIMECLOCK  shift, and go to state 28
    '('           shift, and go to state 29
    '-'           shift, and go to state 30

    expr      go to state 72
    expra     go to state 32
    term      go to state 33
    exponent  go to state 34
    factor    go to state 35


State 45

   49 factor: KW_INPUT '(' . STRING_LITERAL ')'

    STRING_LITERAL  shift, and go to state 73


State 46

   30 expr: . expr OP_LT expra
   31     | . expr OP_GT expra
   32     | . expr OP_LTE expra
   33     | . expr OP_GTE expra
   34     | . expr OP_NE expra
   35     | . expr OP_EQ expra
   36     | . expra
   37 expra: . expra '+' term
   38      | . expra '-' term
   39      | . term
   40 term: . term '*' exponent
   41     | . term '/' exponent
   42     | . term '%' exponent
   43     | . exponent
   44 exponent: . factor OP_EXP exponent
   45         | . factor
   46 factor: . '(' expr ')'
   47       | . '-' factor
   48       | . TK_NUM
   49       | . KW_INPUT '(' STRING_LITERAL ')'
   50       | . TK_ID
   51       | . TK_ID '[' expr ']'
   52       | . KW_TIMECLOCK '(' ')'
   53       | . KW_RANDINT '(' expr ',' expr ')'
   53       | KW_RANDINT '(' . expr ',' expr ')'

    TK_NUM        shift, and go to state 24
    TK_ID         shift, and go to state 25
    KW_INPUT      shift, and go to state 26
    KW_RANDINT    shift, and go to state 27
    KW_TIMECLOCK  shift, and go to state 28
    '('           shift, and go to state 29
    '-'           shift, and go to state 30

    expr      go to state 74
    expra     go to state 32
    term      go to state 33
    exponent  go to state 34
    factor    go to state 35


State 47

   52 factor: KW_TIMECLOCK '(' . ')'

    ')'  shift, and go to state 75


State 48

   30 expr: expr . OP_LT expra
   31     | expr . OP_GT expra
   32     | expr . OP_LTE expra
   33     | expr . OP_GTE expra
   34     | expr . OP_NE expra
   35     | expr . OP_EQ expra
   46 factor: '(' expr . ')'

    OP_LT   shift, and go to state 50
    OP_GT   shift, and go to state 51
    OP_LTE  shift, and go to state 52
    OP_GTE  shift, and go to state 53
    OP_NE   shift, and go to state 54
    OP_EQ   shift, and go to state 55
    ')'     shift, and go to state 76


State 49

   47 factor: '-' factor .

    $default  reduce using rule 47 (factor)


State 50

   30 expr: expr OP_LT . expra
   37 expra: . expra '+' term
   38      | . expra '-' term
   39      | . term
   40 term: . term '*' exponent
   41     | . term '/' exponent
   42     | . term '%' exponent
   43     | . exponent
   44 exponent: . factor OP_EXP exponent
   45         | . factor
   46 factor: . '(' expr ')'
   47       | . '-' factor
   48       | . TK_NUM
   49       | . KW_INPUT '(' STRING_LITERAL ')'
   50       | . TK_ID
   51       | . TK_ID '[' expr ']'
   52       | . KW_TIMECLOCK '(' ')'
   53       | . KW_RANDINT '(' expr ',' expr ')'

    TK_NUM        shift, and go to state 24
    TK_ID         shift, and go to state 25
    KW_INPUT      shift, and go to state 26
    KW_RANDINT    shift, and go to state 27
    KW_TIMECLOCK  shift, and go to state 28
    '('           shift, and go to state 29
    '-'           shift, and go to state 30
